--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,323 @@
 @charset "utf-8";
 /* CSS Document */
+content{
+	display: flex;
+	flex-wrap: wrap;
+	order:initial;
+}
+
+
+@media screen and (max-width: 550px ) {
+	.header nav, h1 {
+		font-size: 1rem;
+		width: 100%;
+		order: 0;
+		padding: 0;
+		margin: 0;
+	}
+	.inside header {
+	  position: relative;
+	  top: 0;
+	  width: 100%;
+	  z-index: 1000;
+	}
+	.inside #map {
+	  background-color: #ccc;
+	  width: 100%;
+		height: 20vh;
+	}
+	#breadcrumb {
+	    padding: 15px;
+	    list-style: none;
+	    background-color: #eee;
+	    font-size: .8rem;
+	    margin: 0;
+	    width: calc(100% - 30px);
+			order: 1;
+	}
+	.inside #restaurant-container{
+		order: 3;
+		width: 100%;
+		padding: 0;
+		display: inline;
+	}
+	.inside #map-container{
+		order:2;
+		width: 100%;
+		display: flex;
+    flex-flow: wrap;
+    	flex-direction: initial;
+    	flex-wrap: wrap;
+    	display: inline-flex;
+	}
+	.inside #reviews-container{
+		order:2;
+		width: 100%;
+		height: 25vh;
+		display: inline;
+	}
+	.filter-options {
+	  width: 100%;
+		font-size: .8rem;
+	}
+	#restaurant-name {
+	  color: #8A4500;
+	  font-family: Arial,sans-serif;
+	  font-size: 1.2rem;
+		width: calc(100% - 30px);
+	  font-weight: 200;
+	  letter-spacing: 0;
+	  margin: 15px;
+	  text-transform: uppercase;
+	  line-height: 1.1;
+	}
+	#restaurant-img {
+		width: 100%;
+		height: 30vh;
+    object-fit: cover;
+	}
+	#restaurant-address {
+	  font-size: 12pt;
+	  margin: 10px 0px;
+	}
+	#restaurant-cuisine {
+	  background-color: #333;
+	  color: #ddd;
+	  font-size: 12pt;
+	  font-weight: 300;
+	  letter-spacing: 10px;
+	  margin: 0 0 20px;
+	  padding: 2px 0;
+	  text-align: center;
+	  text-transform: uppercase;
+		width: 100%;
+	}
+	.inside #footer {
+	  bottom: 0;
+	  width: calc(100% - 50px);
+	}
+	#reviews-list li {
+	  width: calc(100% - 40px);
+	}
+	#restaurants-list li {
+	  width: calc(100% - 30px);
+	}
+	#map {
+	  height: 40vh;
+	  width: 100%;
+	}
+}
+
+@media screen and (min-width: 551px) {
+	.header nav, h1 {
+		font-size: 1.2rem;
+		width: 100%;
+		order: 0;
+		padding: 0;
+		margin: 0;
+	}
+	.inside header {
+	  position: relative;
+	  top: 0;
+	  width: 100%;
+	  z-index: 1000;
+	}
+	.inside #map {
+	  background-color: #ccc;
+	  width: 100%;
+		height: 30vh;
+	}
+	#breadcrumb {
+	    padding: 15px;
+	    list-style: none;
+	    background-color: #eee;
+	    font-size: 1rem;
+	    margin: 0;
+	    width: calc(100% - 30px);
+			order: 1;
+	}
+	.inside #restaurant-container{
+		order: 3;
+		width: 100%;
+		padding: 0;
+		display: inline;
+	}
+	.inside #map-container{
+		order:2;
+		width: 100%;
+		display: flex;
+    flex-flow: wrap;
+    	flex-direction: initial;
+    	flex-wrap: wrap;
+    	display: inline-flex;
+	}
+	.inside #reviews-container{
+		order:4;
+		width: 100%;
+		height: 25vh;
+		display: inline;
+	}
+	.filter-options {
+	  width: 100%;
+		font-size: .8rem;
+	}
+	#restaurant-name {
+	  color: #8A4500;
+	  font-family: Arial,sans-serif;
+	  font-size: 1.2rem;
+		width: calc(100% - 30px);
+	  font-weight: 200;
+	  letter-spacing: 0;
+	  margin: 15px;
+	  text-transform: uppercase;
+	  line-height: 1.1;
+	}
+	#restaurant-img {
+		width: calc(100% - 300px);
+		height: 40vh;
+    object-fit: cover;
+	}
+	#restaurant-address {
+	  font-size: 12pt;
+	  margin: 10px 0px;
+	}
+	#restaurant-cuisine {
+	  background-color: #333;
+	  color: #ddd;
+	  font-size: 12pt;
+	  font-weight: 300;
+	  letter-spacing: 10px;
+	  margin: 0 0 20px;
+	  padding: 2px 0;
+	  text-align: center;
+	  text-transform: uppercase;
+		width: 100%;
+	}
+	.inside #footer {
+	  bottom: 0;
+	  width: calc(100% - 50px);
+	}
+	#reviews-list li {
+	  width: calc(50% - 44px);
+		display: inline-grid;
+	}
+	#restaurants-list li {
+	  width: calc(50% - 96px);
+	}
+	#map {
+	  height: 40vh;
+	  width: 100%;
+	}
+	#restaurant-hours{
+		display: inline-block;
+	}
+}
+
+@media screen and (min-width: 900px) {
+	.header nav, h1 {
+		font-size: 1.2rem;
+		width: 100%;
+		order: 0;
+		padding: 0;
+		margin: 0;
+	}
+	.inside header {
+	  position: relative;
+	  top: 0;
+	  width: 100%;
+	  z-index: 1000;
+	}
+	.inside #map {
+	  background-color: #ccc;
+	  width: 100%;
+		height: 30vh;
+	}
+	#breadcrumb {
+	    padding: 15px;
+	    list-style: none;
+	    background-color: #eee;
+	    font-size: 1rem;
+	    margin: 0;
+	    width: calc(100% - 30px);
+			order: 1;
+	}
+	.inside #restaurant-container{
+		order: 3;
+		width: 100%;
+		padding: 0;
+		display: inline;
+	}
+	.inside #map-container{
+		order:2;
+		width: 100%;
+		display: flex;
+    flex-flow: wrap;
+    	flex-direction: initial;
+    	flex-wrap: wrap;
+    	display: inline-flex;
+	}
+	.inside #reviews-container{
+		order:4;
+		width: 100%;
+		height: 25vh;
+		display: inline;
+	}
+	.filter-options {
+	  width: 100%;
+		font-size: .8rem;
+	}
+	#restaurant-name {
+	  color: #8A4500;
+	  font-family: Arial,sans-serif;
+	  font-size: 1.2rem;
+		width: calc(100% - 30px);
+	  font-weight: 200;
+	  letter-spacing: 0;
+	  margin: 15px;
+	  text-transform: uppercase;
+	  line-height: 1.1;
+	}
+	#restaurant-img {
+		width: calc(100% - 300px);
+		height: 40vh;
+    object-fit: cover;
+	}
+	#restaurant-address {
+	  font-size: 12pt;
+	  margin: 10px 0px;
+	}
+	#restaurant-cuisine {
+	  background-color: #333;
+	  color: #ddd;
+	  font-size: 12pt;
+	  font-weight: 300;
+	  letter-spacing: 10px;
+	  margin: 0 0 20px;
+	  padding: 2px 0;
+	  text-align: center;
+	  text-transform: uppercase;
+		width: 100%;
+	}
+	.inside #footer {
+	  bottom: 0;
+	  width: calc(100% - 50px);
+	}
+	#reviews-list li {
+	  width: calc(33% - 41px);
+		display: inline-grid;
+	}
+	#restaurants-list li {
+	  width: calc(33% - 91px);
+	}
+	#map {
+	  height: 40vh;
+	  width: 100%;
+	}
+	#restaurant-hours{
+		display: inline-block;
+	}
+
+}
 
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
@@ -18,11 +336,11 @@ ul, li {
 	color: #333;
 }
 a {
-	color: orange;
+	color: #8A4500;
 	text-decoration: none;
 }
 a:hover, a:focus {
-	color: #3397db;
+	color: #96C7F3;
 	text-decoration: none;
 }
 a img{
@@ -30,48 +348,37 @@ a img{
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+  /*margin: 0 0 20px;*/
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+/*article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
-}
+}*/
 #maincontent {
   background-color: #f3f3f3;
-  min-height: 100%;
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #DBDBDB;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
 }
+#footer strong {
+	color:#FFD5A8
+}
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
-  background-color: #252831;
+  background-color: #444;
   text-align:center;
-}
-nav h1 {
-  margin: auto;
 }
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
-}
-#breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
@@ -99,34 +406,31 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
-  width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  height: auto;
+  background-color: #96C7F3;
   align-items: center;
 }
 .filter-options h2 {
-  color: white;
+  color: #333333;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 0 10px;
 }
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
-  font-size: 11pt;
-  height: 35px;
+  font-size: .8rem;
+  height: 1.5rem;
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
-  width: 200px;
+  width: 150px;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -136,6 +440,10 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+	flex-flow: wrap;
+    flex-direction: initial;
+    flex-wrap: wrap;
+  display: inline-flex;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -145,18 +453,17 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
-  max-width: 100%;
+  width: 100%;
   min-height: 248px;
-  min-width: 100%;
+	object-fit: cover;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #8A4500;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -164,13 +471,14 @@ nav h1 a {
   line-height: 1.3;
   margin: 20px 0 10px;
   text-transform: uppercase;
+	object-fit: cover;
 }
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #8A4500;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -183,75 +491,15 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}
-.inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
-}
-.inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
-}
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
-}
-#restaurant-name {
-  color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 20pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  margin: 15px 0 30px;
-  text-transform: uppercase;
-  line-height: 1.1;
-}
-#restaurant-img {
-	width: 90%;
-}
-#restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
-}
-#restaurant-cuisine {
-  background-color: #333;
-  color: #ddd;
-  font-size: 12pt;
-  font-weight: 300;
-  letter-spacing: 10px;
-  margin: 0 0 20px;
-  padding: 2px 0;
-  text-align: center;
-  text-transform: uppercase;
-	width: 90%;
-}
+
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
 }
 #reviews-container {
   padding: 30px 40px 80px;
 }
-#reviews-container h2 {
-  color: #f58500;
-  font-size: 24pt;
-  font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
-}
+
 #reviews-list {
   margin: 0;
   padding: 0;
@@ -259,13 +507,11 @@ nav h1 a {
 #reviews-list li {
   background-color: #fff;
     border: 2px solid #f3f3f3;
-  display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
 }
 #reviews-list li p {
   margin: 0 0 10px;
